# x8

./: .gitignore  LICENSE  README.md  pyproject.toml
dev/: README.md  x8.code-profile
playground/: test.py
samples/video_generation_api/: x8.yaml
scripts/: antlr-generate-mac.sh  lint.sh  publish.sh
tests/ai/text_generation/: _providers.py  _sync_and_async_client.py  test_all.py
tests/ai/video_generation/: _providers.py  _sync_and_async_client.py  playground.py  test_all.py
tests/common/: secrets.py  sync_and_async_client.py
tests/compute/container_deployment/: _providers.py  _sync_and_async_client.py  test_all.py
tests/compute/container_deployment/service/: side.py  x8.yaml
tests/compute/container_registry/: _providers.py  _sync_and_async_client.py  playground.py  test_all.py
tests/compute/container_registry/service/: hello.py  x8.yaml
tests/compute/containerizer/: playground.py
tests/compute/kubernetes_/: _providers.py  test_all.py
tests/content/live_stream/: _providers.py  _sync_and_async_client.py  playground.py  test_all.py
tests/content/video/: _providers.py  _sync_and_async_client.py  playground.py  test_all.py
tests/messaging/pubsub/: _providers.py  _sync_and_async_client.py  test_all.py
tests/messaging/queue_/: _data.py  _providers.py  _sync_and_async_client.py  test_all.py
tests/storage/config_store/: _data.py  _providers.py  _sync_and_async_client.py  test_all.py
tests/storage/document_store/: __init__.py  _data.py  _providers.py  _sync_and_async_client.py  playground.py  test_all.py
tests/storage/key_value_store/: _data.py  _providers.py  _sync_and_async_client.py  test_all.py
tests/storage/object_store/: __init__.py  _data.py  _providers.py  _sync_and_async_client.py  test_all.py
tests/storage/object_store/data/: test-json.json
tests/storage/search_store/: _data.py  _providers.py  _queries.py  _sync_and_async_client.py  test_all.py
tests/storage/secret_store/: _data.py  _providers.py  _sync_and_async_client.py  test_all.py
tests/storage/vector_store/: _data.py  _providers.py  _sync_and_async_client.py  test_all.py
x8/_common/: azure_provider.py  google_provider.py  hosted_provider.py  redis_provider.py
x8/ai/_common/: openai_provider.py
x8/ai/text_generation/: __init__.py  _models.py  component.py
x8/ai/text_generation/providers/: amazon_bedrock.py  anthropic.py  azure_openai.py  cohere.py  deepseek.py  fireworks.py  google.py  groq.py  mistral.py  ollama.py  openai.py  openai_legacy.py  replicate.py  together.py  xai.py
x8/ai/video_generation/: __init__.py  _models.py  component.py
x8/ai/video_generation/providers/: api.py  google.py  openai.py
x8/composite/choice/: __init__.py  _models.py  component.py
x8/composite/choice/providers/: default.py
x8/composite/script/: __init__.py  component.py
x8/composite/script/providers/: default.py
x8/compute/_common/: _amazon_ec2_helper.py  _image_helper.py  _models.py
x8/compute/container_deployment/: __init__.py  _feature.py  _helper.py  _models.py  component.py
x8/compute/container_deployment/providers/: _amazon_ecs.py  _base.py  amazon_ecs_ec2.py  amazon_ecs_fargate.py  aws_app_runner.py  azure_container_apps.py  azure_container_instances.py  default.py  docker_local.py  google_cloud_run.py  local.py
x8/compute/container_registry/: __init__.py  _models.py  component.py
x8/compute/container_registry/providers/: amazon_elastic_container_registry.py  azure_container_registry.py  default.py  docker_local.py  google_artifact_registry.py  local.py
x8/compute/containerizer/: __init__.py  _config.py  _helper.py  _models.py  component.py
x8/compute/containerizer/providers/: default.py  docker.py  local.py
x8/compute/kubernetes/: __init__.py  _models.py  component.py
x8/compute/kubernetes/providers/: _base.py  default.py  (+3 more)
x8/content/audio/: __init__.py  _models.py  component.py
x8/content/file/: __init__.py  _models.py
x8/content/image/: __init__.py  _models.py  component.py
x8/content/live_stream/: __init__.py  _models.py  component.py
x8/content/video/: __init__.py  _models.py  component.py
x8/core/: __init__.py  _arg_parser.py  _async_helper.py  _component.py  _context.py  _data_accessor.py  _decorators.py  _loader.py  _log_helper.py  _ncall.py  _operation.py  _operation_parser.py  _provider.py  _response.py  _type_converter.py  _yaml_loader.py  constants.py  data_model.py  dependency.py  exceptions.py  main.py  manifest.py  registry.yaml  spec.py  time.py
x8/interface/api/: __init__.py  _api_provider.py  _constants.py  _helper.py  _models.py  _operation.py  component.py  exceptions.py
x8/interface/auth/: __init__.py  _models.py  component.py
x8/interface/cli/: __init__.py  component.py
x8/interface/web/: component.py
x8/interface/worker/: __init__.py  _operation.py  component.py
x8/messaging/_common/: __init__.py  _models.py  _operation.py  _operation_parser.py  azure_service_bus.py  google_pubsub.py  postgresql.py  redis.py  sqlite.py
x8/messaging/pubsub/: __init__.py  _feature.py  component.py
x8/messaging/queue/: __init__.py  _feature.py  component.py
x8/ql/: __init__.py  _functions.py  _models.py  _parser_listener.py  _ql_parser.py  _query_processor.py  exceptions.py
x8/ql/grammar/: X8QLLexer.g4  X8QLParser.g4
x8/storage/_common/: __init__.py  _attributes.py  _comparator.py  _component.py  _index_helper.py  _item_processor.py  _models.py  _operation.py  _operation_parser.py  _parameter_parser.py  _provider.py  _validator.py
x8/storage/config_store/: __init__.py  _constants.py  _helper.py  _models.py  component.py
x8/storage/document_store/: __init__.py  _feature.py  _helper.py  _models.py  component.py
x8/storage/key_value_store/: __init__.py  _helper.py  _models.py  component.py
x8/storage/object_store/: __init__.py  _helper.py  _models.py  component.py
x8/storage/search_store/: __init__.py  _feature.py  _helper.py  _models.py  component.py
x8/storage/secret_store/: __init__.py  _constants.py  _models.py  component.py
x8/storage/vector_store/: __init__.py  _helper.py  _models.py  component.py
(+103 files in other folders)
